--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "core-js": "^3.4.4",
-    "node-sass": "^4.13.1",
-    "sass-loader": "^8.0.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
@@ -23,6 +21,8 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "less": "^4.1.3",
+    "less-loader": "7.3.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
